fix(tests): no need to parse json